<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.escproject.AddFeedbackActivity">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_add"
        android:text="Add"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_feedback"
        android:textSize="35dp"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentBottom="true"/>

    <android.support.v7.widget.RecyclerView
        android:layout_alignParentTop="true"
        android:layout_above="@id/edit_feedback"
        android:id="@+id/recyclerViewFeedback"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
