<resources>
    <string name="app_name">ESCProject</string>

    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Forgot_password">Forgot your password?</string>
    <string name="Signup_account">No account yet? Sign up</string>

    <string name="Name">Name</string>
    <string name="PasswordSignup">Password (6-10 chars)</string>
    <string name="ReenterPassword">Re-enter Password</string>
    <string name="Signup">Sign Up</string>
    <string name="Have_account">Already a member? Login</string>

    <string name="forgotpassword">Forgot password?</string>
    <string name="forgotpasswordtext">Please provide us with your registered email to receive your password reset instructions</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="Back">Back to Login</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="courseName">Enter Course Name</string>
    <string name="courseID">Enter Course ID</string>
    <string name="classID">Enter Class ID</string>
    <string name="addCourse">Add Course</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

